--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.11.19",
+    "feed": "^5.1.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
     "next": "^14.0.0",
