--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dayjs": "^1.11.19",
     "feed": "^5.1.0",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.9.0",
     "marked": "^12.0.0",
+    "marked-highlight": "^2.1.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
